--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ mccabe==0.6.1
 numpy==1.19.5
 Pillow==8.3.2
 platformdirs==2.3.0
+pyFFTW==0.12.0
 pylint==2.10.2
 pyparsing==2.4.7
 python-dateutil==2.8.2
